[tool.poetry]
name = "edustream"
version = "0.1.0"
description = ""
authors = ["skippi <jbtcao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "^4.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
